[gd_scene load_steps=17 format=3 uid="uid://cfsxn0iyywxs5"]

[ext_resource type="Script" path="res://SCRIPTS/level.gd" id="1_stx43"]
[ext_resource type="PackedScene" uid="uid://dv0x4vv0fkbd2" path="res://SCENES/Ocean/ocean.tscn" id="2_lnmp3"]
[ext_resource type="PackedScene" uid="uid://cw7vojdifr8w6" path="res://SCENES/pirate_ship.tscn" id="3_ax278"]
[ext_resource type="PackedScene" uid="uid://co8iy1he6fkwa" path="res://SCENES/GUI/level_ui.tscn" id="3_nmge5"]
[ext_resource type="PackedScene" uid="uid://ptto4146phwg" path="res://SCENES/boat.tscn" id="4_64cm4"]
[ext_resource type="PackedScene" uid="uid://he2ienxfwna8" path="res://SCENES/seagull.tscn" id="4_kcig5"]
[ext_resource type="Script" path="res://Custom Resources/Cargo/cargo_item_data.gd" id="6_jqw0x"]
[ext_resource type="PackedScene" uid="uid://je3j0pd8ickv" path="res://SCENES/splish.tscn" id="6_peku6"]
[ext_resource type="Resource" uid="uid://dp77h4fp8pyjt" path="res://Custom Resources/Cargo/meat_cargo_item_data.tres" id="7_2y8ty"]
[ext_resource type="Script" path="res://SCRIPTS/game_camera.gd" id="7_r4a8d"]
[ext_resource type="PackedScene" uid="uid://cb85ltydhxs13" path="res://SCENES/dock.tscn" id="8_b63j4"]
[ext_resource type="PackedScene" uid="uid://qotgv1kx4jwd" path="res://SCENES/rat_hole.tscn" id="8_mfs7h"]
[ext_resource type="Script" path="res://Custom Resources/Morale Modifiers/MoraleModifier.gd" id="9_i66pm"]
[ext_resource type="PackedScene" uid="uid://cem0d6364g4aq" path="res://SCENES/weather.tscn" id="11_p3ae6"]

[sub_resource type="Resource" id="Resource_yeen7"]
resource_local_to_scene = true
script = ExtResource("9_i66pm")
name = "Attack"
rate = -0.2

[sub_resource type="Curve2D" id="Curve2D_54joc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -300, 0, 0, 0, 0, 640, -300)
}
point_count = 2

[node name="Level" type="Node" node_paths=PackedStringArray("seagull_spawn", "player", "weather", "boat") groups=["level"]]
script = ExtResource("1_stx43")
dock_scene = ExtResource("8_b63j4")
pirate_ship_scene = ExtResource("3_ax278")
seagull_scene = ExtResource("4_kcig5")
seagull_spawn = NodePath("SeagullSpawnPath/SeagullSpawn")
player = NodePath("People/Splish")
weather = NodePath("Weather")
minimum_seconds = 30
boat = NodePath("Boat")
task_list = Array[int]([1, 1, 2, 2])

[node name="Ocean" parent="." instance=ExtResource("2_lnmp3")]

[node name="Boat" parent="." instance=ExtResource("4_64cm4")]
position = Vector2(320, 180)
cargo_list = Array[ExtResource("6_jqw0x")]([ExtResource("7_2y8ty")])

[node name="People" type="Node2D" parent="." groups=["people"]]
z_index = 1
y_sort_enabled = true

[node name="Splish" parent="People" instance=ExtResource("6_peku6")]
position = Vector2(320, 180)
attack_morale_modifier = SubResource("Resource_yeen7")

[node name="GameCamera" type="Camera2D" parent="People" node_paths=PackedStringArray("focus_target")]
position = Vector2(320, 180)
script = ExtResource("7_r4a8d")
focus_target = NodePath("../Splish")

[node name="Obstacles" type="Node" parent="."]

[node name="RatHole" parent="Obstacles" instance=ExtResource("8_mfs7h")]
position = Vector2(320, 10)

[node name="LeakSpawnTimer" type="Timer" parent="Obstacles"]
wait_time = 5.0
autostart = true

[node name="SeagullSpawnTimer" type="Timer" parent="Obstacles"]
wait_time = 10.0

[node name="StartDock" parent="." node_paths=PackedStringArray("boat") instance=ExtResource("8_b63j4")]
position = Vector2(640, 180)
boat = NodePath("../Boat")

[node name="Weather" parent="." instance=ExtResource("11_p3ae6")]

[node name="LevelUI" parent="." instance=ExtResource("3_nmge5")]

[node name="SeagullSpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_54joc")

[node name="SeagullSpawn" type="PathFollow2D" parent="SeagullSpawnPath"]
position = Vector2(0, -300)

[connection signal="set_up" from="Boat" to="." method="_on_boat_ready"]
[connection signal="timeout" from="Obstacles/LeakSpawnTimer" to="." method="_on_leak_spawn_timer_timeout"]
[connection signal="timeout" from="Obstacles/SeagullSpawnTimer" to="." method="spawn_seagull"]
